[tool.poetry]
name = "bookstore"
version = "1.7.1"
description = "Bookstore API"
authors = ["JefersonCL21 <jeferson@courageousland.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.0"
djangorestframework = "^3.14.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.3.0"
psycopg2 = "^2.9.9"
whitenoise = "^6.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
